--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
         <img src="logo/mypod.png" alt="图标">
-        <h1>匡文成的网络日志</h1>
+        <h1>小草的日记本</h1>
 
        <h2>第一篇日志</h2>
         <p>
