取消图片版本

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
          <title>小草的日记本</title>
 
     <style>
-        body {
-            background-color: #fcfcff;
+        p {
+            color: maroon;
         }
     </style>
     </head>
@@ -31,8 +31,8 @@
         <a target="_blank" href="https://www.xiaocaoderijiben.online">点击前往小草的日记本</a>
         </p>
         <br>
-        <a href="html/1.html"><img src="thumbnails/1.jpg" alt="第一张图片"></a>
-        <a href="images/2.jpg"><img src="images/1.jpg" alt="2"></a>
+        <a href="html/1.html"><img src="1thumbnails/1.jpg" alt="第一张图片"></a>
+        <a href="1images/2.jpg"><img src="1images/1.jpg" alt="2"></a>
         
         
     </body>
