--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <h1>如何联系小草？</h1>
     <p>你可以通过邮箱联系小草，邮箱地址为<a href="mailto:xiaocaoderijiben@qq.com">xiaocaoderijiben@qq.com</a></p>
     <h1>关于这个页面</h1>
-    <p>这个页面是用我所学的知识写出来的网页，虽然有些简陋，但是我相信一定会越来越高级的！</p>
+    <p>这个页面是用我所学的知识写出来的网页，虽然有些简陋，但是我相信一定会越来越高级的！你可以浏览以下页面</p>
+    <ul>
+        <li><a target="_blank" href="html/images.html">小草的图片</a></li>
+    </ul>
 </body>
