--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>什么是小草的日记本</title>
+	<style>
+		h1 {
+			border-bottom: 1px solid black;
+
+			}
+	</style>
 </head>
 <body>
     <img src="images/sun.png" alt="小草的日记本站点logo" title="小草的日记本站点logo" width="100" height="100">
