--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>小草，这个小草是我的网名。也是我对我自己的一个昵称，小草本人位于山东青岛。平日喜爱折腾计算机，<br>
     喜欢折腾各类电子设备，最近正在学习HTML和CSS。</p>
     <h1>关于小草的日记本</h1>
-    <p>小草的日记本，域名为<a href="https://www.xiaocaoderijiben.online">https://www.xiaocaoderijiben.online</a><br>
+    <p>小草的日记本，域名为<a target="_blank" href="https://www.xiaocaoderijiben.online">https://www.xiaocaoderijiben.online</a><br>
     网站搭建于位于中国大陆的轻量应用服务器。使用Edgeone进行加速</p>
     <h1>如何联系小草？</h1>
     <p>你可以通过邮箱联系小草，邮箱地址为<a href="mailto:xiaocaoderijiben@qq.com">xiaocaoderijiben@qq.com</a></p>
