--- a/html/images.html
+++ b/html/images.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>小草的日记本-图片</title>
+    <link rel="stylesheet" href="../index.css">
 </head>
 <body>
     <img src="../images/sun.png" alt="小草的日记本站点logo" title="小草的日记本站点logo" width="100" height="100">
     <h1>图片</h1>
     <p>这是小草的日记本的图片</p>
-    <img src=""
+    <img src="../images/sun.png" alt="小草的日记本站点logo" title="小草的日记本站点logo" width="100" height="100">
 </body>
+</html>
