--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>什么是小草的日记本</title>
-	<style>
-		h1 {
-			border-bottom: 1px solid black;
-
-			}
-	</style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <img src="images/sun.png" alt="小草的日记本站点logo" title="小草的日记本站点logo" width="100" height="100">
     <h1>关于小草</h1>
-    <p>小草，这个小草是我的网名。也是我对我自己的一个昵称，小草本人位于山东青岛。平日喜爱折腾计算机，<br>
+    <p class="purple">小草，这个小草是我的网名。也是我对我自己的一个昵称，小草本人位于山东青岛。平日喜爱折腾计算机，<br>
     喜欢折腾各类电子设备，最近正在学习HTML和CSS。</p>
     <h1>关于小草的日记本</h1>
     <p>小草的日记本，域名为<a target="_blank" href="https://www.xiaocaoderijiben.online">https://www.xiaocaoderijiben.online</a><br>
