--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <img src="images/sun.png" alt="小草的日记本站点logo" title="小草的日记本站点logo" width="100" height="100">
     <h1>关于小草</h1>
     <p class="purple">小草，这个小草是我的网名。也是我对我自己的一个昵称，小草本人位于山东青岛。平日喜爱折腾计算机，<br>
-    喜欢折腾各类电子设备，最近正在学习HTML和CSS。</p>
+    喜欢折腾各类电子设备，最近正在学习HTML和CSS。中国有句话叫做：<blockquote>三人行必有我师也</blockquote><br>
+    我必须保持持续的学习才能跟得上世界新技术的发展。所以我会尽可能多多学习！</p>
     <h1>关于小草的日记本</h1>
     <p>小草的日记本，域名为<a target="_blank" href="https://www.xiaocaoderijiben.online">https://www.xiaocaoderijiben.online</a><br>
     网站搭建于位于中国大陆的轻量应用服务器。使用Edgeone进行加速</p>
