--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>什么是小草的日记本</title>
+    <title>小草是谁？</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     我必须保持持续的学习才能跟得上世界新技术的发展。所以我会尽可能多多学习！</p>
     <h1>关于小草的日记本</h1>
     <p>小草的日记本，域名为<a target="_blank" href="https://www.xiaocaoderijiben.online">https://www.xiaocaoderijiben.online</a><br>
-    网站搭建于位于中国大陆的轻量应用服务器。使用Edgeone进行加速</p>
+    小草的日记本是我的一个个人博客，这个博客网站搭建于位于中国大陆的轻量应用服务器。使用Edgeone进行加速如果你对我的博客感兴趣，欢迎随时来访！</p>
     <h1>如何联系小草？</h1>
     <p>你可以通过邮箱联系小草，邮箱地址为<a href="mailto:xiaocaoderijiben@qq.com">xiaocaoderijiben@qq.com</a></p>
     <h1>关于这个页面</h1>
