--- a/html/images.html
+++ b/html/images.html
@@ -10,5 +10,10 @@
     <h1>图片</h1>
     <p>这是小草的日记本的图片</p>
     <img src="../images/sun.png" alt="小草的日记本站点logo" title="小草的日记本站点logo" width="100" height="100">
+    <p>给大家展示一下我家周围的风景图</p>
+    <img src="../images/1.jpg" alt="风景照" title="风景照" width="500" height="500">
+    <img src="../images/2.jpg" alt="风景照" title="风景照" width="500" height="500">
+    <img src="../images/3.jpg" alt="风景照" title="风景照" width="500" height="500">
+    <img src="../images/5.jpg" alt="风景照" title="风景照" width="500" height="500">
 </body>
 </html>
