--- a/html/images.html
+++ b/html/images.html
@@ -8,6 +8,7 @@
 <body>
     <img src="../images/sun.png" alt="小草的日记本站点logo" title="小草的日记本站点logo" width="100" height="100">
     <h1>图片</h1>
+    <a href="../index.html" title="返回首页">返回首页</a>
     <p>这是小草的日记本的图片</p>
     <img src="../images/sun.png" alt="小草的日记本站点logo" title="小草的日记本站点logo" width="100" height="100">
     <p>给大家展示一下我家周围的风景图</p>
